// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups should compile basic module index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / basic

# basic

A basic module

## Index

### Enumerations

- [EnumA](enumerations/EnumA.md)
- [EnumB](enumerations/EnumB.md)

### Classes

- [ClassA](classes/ClassA.md)
- [ClassB](classes/ClassB.md)

### Interfaces

- [InterfaceA](interfaces/InterfaceA.md)
- [InterfaceB](interfaces/InterfaceB.md)

### Type Aliases

- [TypeA](type-aliases/TypeA.md)
- [TypeB](type-aliases/TypeB.md)
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / basic

# basic

A basic module

## Index

| Member | Description |
| :------ | :------ |
| [EnumA](enumerations/EnumA.md) | - |
| [EnumB](enumerations/EnumB.md) | - |
| [ClassA](classes/ClassA.md) | - |
| [ClassB](classes/ClassB.md) | - |
| [InterfaceA](interfaces/InterfaceA.md) | - |
| [InterfaceB](interfaces/InterfaceB.md) | - |

<a id="typea" name="typea"></a>

## TypeA

> **TypeA**: \`string\`

***

<a id="typeb" name="typeb"></a>

## TypeB

> **TypeB**: \`string\`
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](index.md) \\| [API](modules.md)

***

[typedoc-stubs](index.md) / basic

# basic

A basic module

## Enumerations

### EnumA

***

### EnumB

## Classes

### ClassA

#### Constructors

##### new ClassA()

> **new ClassA**(): [\`ClassA\`](basic.md#classa)

###### Returns

[\`ClassA\`](basic.md#classa)

***

### ClassB

#### Constructors

##### new ClassB()

> **new ClassB**(): [\`ClassB\`](basic.md#classb)

###### Returns

[\`ClassB\`](basic.md#classb)

## Interfaces

### InterfaceA

#### Properties

##### propA

> **propA**: \`string\`

##### propB

> **propB**: \`string\`

***

### InterfaceB

## Type Aliases

### TypeA

> **TypeA**: \`string\`

***

### TypeB

> **TypeB**: \`string\`
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](index.md)

***

[typedoc-stubs](index.md) / basic

# basic

A basic module

<a id="enuma" name="enuma"></a>

## EnumA

***

<a id="enumb" name="enumb"></a>

## EnumB

***

<a id="classa" name="classa"></a>

## ClassA

### Constructors

<a id="constructors" name="constructors"></a>

#### new ClassA()

> **new ClassA**(): [\`ClassA\`](basic.md#classa)

##### Returns

[\`ClassA\`](basic.md#classa)

***

<a id="classb" name="classb"></a>

## ClassB

### Constructors

<a id="constructors-1" name="constructors-1"></a>

#### new ClassB()

> **new ClassB**(): [\`ClassB\`](basic.md#classb)

##### Returns

[\`ClassB\`](basic.md#classb)

***

<a id="interfacea" name="interfacea"></a>

## InterfaceA

### Properties

<a id="propa" name="propa"></a>

#### propA

> **propA**: \`string\`

<a id="propb" name="propb"></a>

#### propB

> **propB**: \`string\`

***

<a id="interfaceb" name="interfaceb"></a>

## InterfaceB

***

<a id="typea" name="typea"></a>

## TypeA

> **TypeA**: \`string\`

***

<a id="typeb" name="typeb"></a>

## TypeB

> **TypeB**: \`string\`
"
`;

exports[`Groups should compile categories group page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](index.md) \\| [API](modules.md)

***

[typedoc-stubs](index.md) / has-categories

# has-categories

A module that contains categories

## Enumerations

### Category A

#### CategoryAEnum1

***

#### CategoryAEnum2

### Category B

#### CategoryBEnum1

***

#### CategoryBEnum2

### Other

#### UnCategorizedEnum

## Interfaces

### Category A

#### CategoryAInterface1

***

#### CategoryAInterface2

### Category B

#### CategoryBInterface1

***

#### CategoryBInterface2

### Other

#### UnCategorizedInterace
"
`;

exports[`Groups should compile categories group page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](index.md)

***

[typedoc-stubs](index.md) / has-categories

# has-categories

A module that contains categories

## Category A

<a id="categoryaenum1" name="categoryaenum1"></a>

### CategoryAEnum1

***

<a id="categoryaenum2" name="categoryaenum2"></a>

### CategoryAEnum2

***

<a id="categoryainterface1" name="categoryainterface1"></a>

### CategoryAInterface1

***

<a id="categoryainterface2" name="categoryainterface2"></a>

### CategoryAInterface2

## Category B

<a id="categorybenum1" name="categorybenum1"></a>

### CategoryBEnum1

***

<a id="categorybenum2" name="categorybenum2"></a>

### CategoryBEnum2

***

<a id="categorybinterface1" name="categorybinterface1"></a>

### CategoryBInterface1

***

<a id="categorybinterface2" name="categorybinterface2"></a>

### CategoryBInterface2

## Other

<a id="uncategorizedenum" name="uncategorizedenum"></a>

### UnCategorizedEnum

***

<a id="uncategorizedinterace" name="uncategorizedinterace"></a>

### UnCategorizedInterace
"
`;

exports[`Groups should compile categories index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / has-categories

# has-categories

A module that contains categories

## Index

### Enumerations

#### Category A

- [CategoryAEnum1](enumerations/CategoryAEnum1.md)
- [CategoryAEnum2](enumerations/CategoryAEnum2.md)

#### Category B

- [CategoryBEnum1](enumerations/CategoryBEnum1.md)
- [CategoryBEnum2](enumerations/CategoryBEnum2.md)

#### Other

- [UnCategorizedEnum](enumerations/UnCategorizedEnum.md)

### Interfaces

#### Category A

- [CategoryAInterface1](interfaces/CategoryAInterface1.md)
- [CategoryAInterface2](interfaces/CategoryAInterface2.md)

#### Category B

- [CategoryBInterface1](interfaces/CategoryBInterface1.md)
- [CategoryBInterface2](interfaces/CategoryBInterface2.md)

#### Other

- [UnCategorizedInterace](interfaces/UnCategorizedInterace.md)
"
`;

exports[`Groups should compile categories index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / has-categories

# has-categories

A module that contains categories

## Index

### Category A

| Member | Description |
| :------ | :------ |
| [CategoryAEnum1](enumerations/CategoryAEnum1.md) | - |
| [CategoryAEnum2](enumerations/CategoryAEnum2.md) | - |
| [CategoryAInterface1](interfaces/CategoryAInterface1.md) | - |
| [CategoryAInterface2](interfaces/CategoryAInterface2.md) | - |

### Category B

| Member | Description |
| :------ | :------ |
| [CategoryBEnum1](enumerations/CategoryBEnum1.md) | - |
| [CategoryBEnum2](enumerations/CategoryBEnum2.md) | - |
| [CategoryBInterface1](interfaces/CategoryBInterface1.md) | - |
| [CategoryBInterface2](interfaces/CategoryBInterface2.md) | - |

### Other

| Member | Description |
| :------ | :------ |
| [UnCategorizedEnum](enumerations/UnCategorizedEnum.md) | - |
| [UnCategorizedInterace](interfaces/UnCategorizedInterace.md) | - |
"
`;

exports[`Groups should compile custom groups index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / has-custom-groups

# has-custom-groups

A module that contains custom groupings

## Index

### Variables

- [variableC](variables/variableC.md)

### CustomGroupA

- [variabelA](variables/variabelA.md)

### CustomGroupB

- [variableB1](variables/variableB1.md)
- [variableB2](variables/variableB2.md)
"
`;

exports[`Groups should compile custom groups index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / has-custom-groups

# has-custom-groups

A module that contains custom groupings

<a id="variabela" name="variabela"></a>

## variabelA

> **\`const\`** **variabelA**: \`true\` = \`true\`

***

<a id="variableb1" name="variableb1"></a>

## variableB1

> **\`const\`** **variableB1**: \`true\` = \`true\`

***

<a id="variableb2" name="variableb2"></a>

## variableB2

> **\`const\`** **variableB2**: \`true\` = \`true\`

***

<a id="variablec" name="variablec"></a>

## variableC

> **\`const\`** **variableC**: \`true\` = \`true\`

Default grouping
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](index.md) \\| API

***

# typedoc-stubs

## Modules

- [42-module-name](42-module-name/index.md)
- [\\<internal\\>](-internal-/index.md)
- [basic](basic/index.md)
- [has-categories](has-categories/index.md)
- [has-custom-groups](has-custom-groups/index.md)
- [has-namespaces](has-namespaces/index.md)
- [has-references](has-references/index.md)
- [has-same-exports](has-same-exports/index.md)
- [index](index/index.md)
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

# typedoc-stubs

| Member | Description |
| :------ | :------ |
| [42-module-name](42-module-name/index.md) | - |
| [\\<internal\\>](-internal-/index.md) | - |
| [basic](basic/index.md) | A basic module |
| [has-categories](has-categories/index.md) | A module that contains categories |
| [has-custom-groups](has-custom-groups/index.md) | A module that contains custom groupings |
| [has-namespaces](has-namespaces/index.md) | A module that contains namespaces |
| [has-references](has-references/index.md) | A module that contains references |
| [has-same-exports](has-same-exports/index.md) | - |
| [index](index/index.md) | A module named index |
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](index.md) \\| API

***

# typedoc-stubs

## Modules

- [42-module-name](42-module-name.md)
- [\\<internal\\>](-internal-.md)
- [basic](basic.md)
- [has-categories](has-categories.md)
- [has-custom-groups](has-custom-groups.md)
- [has-namespaces](has-namespaces/index.md)
- [has-references](has-references.md)
- [has-same-exports](has-same-exports.md)
- [index](module.index.md)
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

# typedoc-stubs

| Member | Description |
| :------ | :------ |
| [42-module-name](42-module-name.md) | - |
| [\\<internal\\>](-internal-.md) | - |
| [basic](basic.md) | A basic module |
| [has-categories](has-categories.md) | A module that contains categories |
| [has-custom-groups](has-custom-groups.md) | A module that contains custom groupings |
| [has-namespaces](has-namespaces/index.md) | A module that contains namespaces |
| [has-references](has-references.md) | A module that contains references |
| [has-same-exports](has-same-exports.md) | - |
| [index](module.index.md) | A module named index |
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../../../index.md) \\| [API](../../../modules.md)

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# Namespace: \\_Namespace\\_A\\_

## Index

### Namespaces

- [NestedNamespace](namespaces/NestedNamespace/index.md)

### Interfaces

- [NamespaceInterface](interfaces/NamespaceInterface.md)
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../../../index.md)

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# Namespace: \\_Namespace\\_A\\_

## Index

| Member | Description |
| :------ | :------ |
| [NestedNamespace](namespaces/NestedNamespace/index.md) | - |
| [NamespaceInterface](interfaces/NamespaceInterface.md) | - |
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../../../index.md) \\| [API](../../../modules.md)

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# Namespace: \\_Namespace\\_A\\_

## Index

### Namespaces

- [NestedNamespace](namespaces/NestedNamespace.md)

## Interfaces

### NamespaceInterface
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../../../index.md)

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# Namespace: \\_Namespace\\_A\\_

## Index

| Member | Description |
| :------ | :------ |
| [NestedNamespace](namespaces/NestedNamespace.md) | - |

<a id="namespaceinterface" name="namespaceinterface"></a>

## NamespaceInterface
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

- [NamespaceB](namespaces/NamespaceB/index.md)
- [\\_Namespace\\_A\\_](namespaces/Namespace_A_/index.md)

### Enumerations

- [EnumB](enumerations/EnumB.md)
- [\\_Enum\\_A\\_](enumerations/Enum_A_.md)

### Classes

- [ClassB](classes/ClassB.md)
- [\\_\\_Class\\_A\\_](classes/Class_A_.md)

### Interfaces

- [InterfaceB](interfaces/InterfaceB.md)
- [\\_Interface\\_A\\_](interfaces/Interface_A_.md)

### Type Aliases

- [TypeB](type-aliases/TypeB.md)
- [\\_Type\\_A\\_](type-aliases/Type_A_.md)

### Variables

- [\\_variable\\_A\\_](variables/variable_A_.md)
- [variableB](variables/variableB.md)

### Functions

- [\\_function\\_A\\_](functions/function_A_.md)
- [functionB](functions/functionB.md)
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

| Member | Description |
| :------ | :------ |
| [NamespaceB](namespaces/NamespaceB/index.md) | - |
| [\\_Namespace\\_A\\_](namespaces/Namespace_A_/index.md) | - |
| [EnumB](enumerations/EnumB.md) | - |
| [\\_Enum\\_A\\_](enumerations/Enum_A_.md) | - |
| [ClassB](classes/ClassB.md) | - |
| [\\_\\_Class\\_A\\_](classes/Class_A_.md) | - |
| [InterfaceB](interfaces/InterfaceB.md) | - |
| [\\_Interface\\_A\\_](interfaces/Interface_A_.md) | - |

<a id="typeb" name="typeb"></a>

## TypeB

> **TypeB**: \`string\`

***

<a id="_type_a_" name="_type_a_"></a>

## \\_Type\\_A\\_

> **\\_Type\\_A\\_**: \`string\`

***

<a id="_variable_a_" name="_variable_a_"></a>

## \\_variable\\_A\\_

> **\`const\`** **\\_variable\\_A\\_**: \`true\` = \`true\`

***

<a id="variableb" name="variableb"></a>

## variableB

> **\`const\`** **variableB**: \`true\` = \`true\`

***

<a id="_function_a_" name="_function_a_"></a>

## \\_function\\_A\\_()

> **\\_function\\_A\\_**(): \`void\`

### Returns

\`void\`

***

<a id="functionb" name="functionb"></a>

## functionB()

> **functionB**(): \`void\`

### Returns

\`void\`
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

- [NamespaceB](namespaces/NamespaceB.md)
- [\\_Namespace\\_A\\_](namespaces/Namespace_A_/index.md)

## Enumerations

### EnumB

***

### \\_Enum\\_A\\_

## Classes

### ClassB

#### Constructors

##### new ClassB()

> **new ClassB**(): [\`ClassB\`](index.md#classb)

###### Returns

[\`ClassB\`](index.md#classb)

***

### \\_\\_Class\\_A\\_

#### Constructors

##### new \\_\\_Class\\_A\\_()

> **new \\_\\_Class\\_A\\_**(): [\`__Class_A_\`](index.md#__class_a_)

###### Returns

[\`__Class_A_\`](index.md#__class_a_)

## Interfaces

### InterfaceB

***

### \\_Interface\\_A\\_

## Type Aliases

### TypeB

> **TypeB**: \`string\`

***

### \\_Type\\_A\\_

> **\\_Type\\_A\\_**: \`string\`

## Variables

### \\_variable\\_A\\_

> **\`const\`** **\\_variable\\_A\\_**: \`true\` = \`true\`

***

### variableB

> **\`const\`** **variableB**: \`true\` = \`true\`

## Functions

### \\_function\\_A\\_()

> **\\_function\\_A\\_**(): \`void\`

#### Returns

\`void\`

***

### functionB()

> **functionB**(): \`void\`

#### Returns

\`void\`
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

| Member | Description |
| :------ | :------ |
| [NamespaceB](namespaces/NamespaceB.md) | - |
| [\\_Namespace\\_A\\_](namespaces/Namespace_A_/index.md) | - |

<a id="enumb" name="enumb"></a>

## EnumB

***

<a id="_enum_a_" name="_enum_a_"></a>

## \\_Enum\\_A\\_

***

<a id="classb" name="classb"></a>

## ClassB

### Constructors

<a id="constructors" name="constructors"></a>

#### new ClassB()

> **new ClassB**(): [\`ClassB\`](index.md#classb)

##### Returns

[\`ClassB\`](index.md#classb)

***

<a id="__class_a_" name="__class_a_"></a>

## \\_\\_Class\\_A\\_

### Constructors

<a id="constructors-1" name="constructors-1"></a>

#### new \\_\\_Class\\_A\\_()

> **new \\_\\_Class\\_A\\_**(): [\`__Class_A_\`](index.md#__class_a_)

##### Returns

[\`__Class_A_\`](index.md#__class_a_)

***

<a id="interfaceb" name="interfaceb"></a>

## InterfaceB

***

<a id="_interface_a_" name="_interface_a_"></a>

## \\_Interface\\_A\\_

***

<a id="typeb" name="typeb"></a>

## TypeB

> **TypeB**: \`string\`

***

<a id="_type_a_" name="_type_a_"></a>

## \\_Type\\_A\\_

> **\\_Type\\_A\\_**: \`string\`

***

<a id="_variable_a_" name="_variable_a_"></a>

## \\_variable\\_A\\_

> **\`const\`** **\\_variable\\_A\\_**: \`true\` = \`true\`

***

<a id="variableb" name="variableb"></a>

## variableB

> **\`const\`** **variableB**: \`true\` = \`true\`

***

<a id="_function_a_" name="_function_a_"></a>

## \\_function\\_A\\_()

> **\\_function\\_A\\_**(): \`void\`

### Returns

\`void\`

***

<a id="functionb" name="functionb"></a>

## functionB()

> **functionB**(): \`void\`

### Returns

\`void\`
"
`;

exports[`Groups should compile readme for a project: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • Readme \\| [API](modules.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Groups should compile references group page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](index.md) \\| [API](modules.md)

***

[typedoc-stubs](index.md) / has-references

# has-references

A module that contains references

## References

### InterfaceA

Re-exports [InterfaceA](basic.md#interfacea)

### RenamedInterfaceB

Renames and re-exports [InterfaceB](basic.md#interfaceb)

### default

Renames and re-exports [defaultFunction](has-references.md#defaultfunction)

## Functions

### defaultFunction()

> **defaultFunction**(): \`string\`

#### Returns

\`string\`
"
`;

exports[`Groups should compile references group page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](index.md)

***

[typedoc-stubs](index.md) / has-references

# has-references

A module that contains references

<a id="interfacea" name="interfacea"></a>

## InterfaceA

Re-exports [InterfaceA](basic.md#interfacea)

<a id="renamedinterfaceb" name="renamedinterfaceb"></a>

## RenamedInterfaceB

Renames and re-exports [InterfaceB](basic.md#interfaceb)

<a id="default" name="default"></a>

## default

Renames and re-exports [defaultFunction](has-references.md#defaultfunction)

<a id="defaultfunction" name="defaultfunction"></a>

## defaultFunction()

> **defaultFunction**(): \`string\`

### Returns

\`string\`
"
`;

exports[`Groups should compile references index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [API](../modules.md)

***

[typedoc-stubs](../index.md) / has-references

# has-references

A module that contains references

## Index

### Functions

- [defaultFunction](functions/defaultFunction.md)

## References

### InterfaceA

Re-exports [InterfaceA](../basic/interfaces/InterfaceA.md)

***

### RenamedInterfaceB

Renames and re-exports [InterfaceB](../basic/interfaces/InterfaceB.md)

***

### default

Renames and re-exports [defaultFunction](functions/defaultFunction.md)
"
`;

exports[`Groups should compile references index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [API](../index.md)

***

[typedoc-stubs](../index.md) / has-references

# has-references

A module that contains references

<a id="interfacea" name="interfacea"></a>

## InterfaceA

Re-exports [InterfaceA](../basic/interfaces/InterfaceA.md)

***

<a id="renamedinterfaceb" name="renamedinterfaceb"></a>

## RenamedInterfaceB

Renames and re-exports [InterfaceB](../basic/interfaces/InterfaceB.md)

***

<a id="default" name="default"></a>

## default

Renames and re-exports [defaultFunction](index.md#defaultfunction)

***

<a id="defaultfunction" name="defaultfunction"></a>

## defaultFunction()

> **defaultFunction**(): \`string\`

### Returns

\`string\`
"
`;
